# STEREO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
app/depth_perception/include/depth_perception/: depth_perception.hpp  robot_handler.hpp
app/depth_perception/src/: depth_perception.cpp  robot_handler.cpp
app/include/: Camera.hpp  YAMLReader.hpp  camera.hpp  event.hpp  shared_state.hpp
app/include/app/: camera.hpp  event.hpp  read_event.hpp  shared_state.hpp
app/include/mapper/: camera.hpp  depth_vector.hpp  mapper.hpp  mapper_emvs_stereo.hpp  trajectory.hpp  transformation.hpp  utils.hpp
app/mapper/include/mapper/: camera.hpp  camera_old.hpp  depth_vector.hpp  mapper.hpp  mapper_emvs_stereo.hpp  median_filtering.hpp  pointcloud_processing.hpp  process1_live.hpp  transformation.hpp  utils.hpp
app/mapper/src/: camera.cpp  camera_old.cpp  mapper.cpp  mapper_emvs_stereo.cpp  median_filtering.cpp  pointcloud_processing.cpp  process1_live.cpp  utils.cpp
app/src/: camera.cpp  main.cpp
app/src/mapper/: camera.cpp  mapper.cpp  utils.cpp
app/talking_test/include/talking/: class1.hpp  class2.hpp  common.hpp  coordinator.hpp
app/talking_test/src/: class1.cpp  class2.cpp  common.cpp  coordinator.cpp
app/tracker/include/tracker/: interpolation.hpp  lk_se3.hpp  tracker.hpp  weight_functions.hpp
app/tracker/src/: lk_se3.cpp  tracker.cpp
app/udp/include/udp/: udp.hpp
app/udp/src/: udp.cpp  udp_start.cpp
calibration/: camera_calibration.py  mono_camera_calibration.py  mono_camera_calibration_augmented.py  stereo_camera_calibration.py  stereo_camera_calibration_augmented.py
calibration/calibrationData/: MONO_camera_0_right_2025MAY01.yaml  MONO_camera_1_left_2025MAY01.yaml  STEREO_as_baseline_2025_MAY19.yaml  STEREO_left_as_baseline_2025MAY01.yaml  calibration_data_MONO_LEFT_2025APR27.yaml  calibration_data_MONO_RIGHT_2025APR27.yaml  calibration_data_camera_0.yaml  calibration_data_camera_1.yaml  stereo_calibration_STEREO_BOTH_2025APR27.yaml
calibration/errorLogs/: no_chessboard_corners.txt
cartesian3dgrid/: CMakeLists.txt
cmake/: CompilerSettings.cmake  Dependencies.cmake
src/: main.cpp
tf2/include/tf2/LinearMath/: Matrix3x3.hpp  Transform.hpp
tf2/include/tf2/impl/: utils.hpp
tf2/include/tf2/msg/: transform_stamped.hpp
viewers/: csv_viewer.py
viewers/pcl/: environment.yml  pointcloud_viewer.py
